Required fields with bold labels, as in Excel.
Fixed bug with marking first infinite field as required.

Minor code layout/reorg.

Fixed bug with counter for variable fields.

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -160,9 +160,12 @@ html,body {
 #wizfunargs label {
   display: block;
   float: left;
-  font-weight: bold;
   font-size: 10px;
   width: 100px;
+}
+
+#wizfunargs label.req {
+  font-weight: bold;
 }
 
 #wizfunargs label:after { content: ':'; }
