--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,7 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-      <!--<a id="wizbtn" title="function wizard">wiz</a>-->
+      <a id="wizbtn" title="function wizard">wiz</a>
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -490,6 +490,7 @@
       <div id="wizselectedfun">
 	<h4 id="wizfunname"></h4>
 	<p id="wizfundesc"></p>
+        <div id="wizarghelp"></div>
         <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizstatus">
