--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -687,3 +687,8 @@ label {
                 font-weight: bold;
                 color: #999;
                }
+
+.hn_inlineselect {
+                   width: 100%;
+                   height: 100%
+                   }
