inline select boxes now added
They render and update correctly on the wiki page and security pertains :(

Yip!

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -690,5 +690,6 @@ label {
 
 .hn_inlineselect {
                    width: 100%;
-                   height: 100%
+                   height: 20px;
+                   font-size: 95%;
                    }
