Disabled function wizard button for pushing to repo

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,7 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-      <a id="wizbtn" title="function wizard">wiz</a>
+      <!-- <a id="wizbtn" title="function wizard">wiz</a> -->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
