Minor changes to func wiz layout

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,7 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-      <!-- <a id="wizbtn" title="function wizard">wiz</a> -->
+      <a id="wizbtn" title="function wizard">wiz</a>
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -505,8 +505,10 @@
       <div id="wizselectedfun">
 	<h4 id="wizfunname"></h4>
 	<p id="wizfundesc"></p>
-        <div id="wizarghelp"></div>
-        <div id="wizfunargs" class="scrollable">
+        <div>
+          <div id="wizarghelp"></div>
+          <div id="wizfunargs" class="scrollable">
+        </div>
         </div>
         <div id="wizstatus">
          <div id="wizbuttons">
