Changed infinite fields in function wizard to use icons (add,delete) instead of text.

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -169,6 +169,11 @@ html,body {
   color: gray;
 }
 
+img.wizrep {
+  vertical-align: middle;
+  padding-left: 1px;
+}
+
 #wizfunargs {
     overflow-y         : auto;
     min-width          : 200px;
