Replaced plus/minus text buttons in resizers with image buttons.

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -169,9 +169,11 @@ html,body {
   color: gray;
 }
 
+/* for icon plus/minus buttons */
 img.wizrep {
   vertical-align: middle;
   padding-left: 1px;
+  padding-right: 1px;
 }
 
 #wizfunargs {
