--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/finder.css" />
     <link rel="stylesheet" href="/tblsorter/style.css" />
-
+    <link rel="stylesheet" href="/tooltip/jquery.tooltip.css" />
   </head>
 
   <body id="hn" data-view="spreadsheet">
@@ -753,5 +753,6 @@
     <script src="/hypernumbers/hn.ui.ctrlpanel.js"></script>
     <script src="/hypernumbers/hn.site.js"></script>
     <script src="/hypernumbers/hn.main.js"></script>
-  <script src='/hypernumbers/hn.dialog.js'></script>
+    <script src="/hypernumbers/hn.dialog.js"></script>
+    <script src="/tooltip/jquery.tooltip.min.js"></script>
 </html>
