--- a/lib/hypernumbers-1.0/priv/core_install/docroot/tooltip/jquery.tooltip.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/tooltip/jquery.tooltip.css
@@ -1,9 +1,9 @@
 #tooltip {
-	position: absolute;
-	z-index: 3000;
-	border: 1px solid #111;
-	background-color: #eee;
-	padding: 5px;
-	opacity: 0.85;
+position: absolute;
+z-index: 10000004;
+border: 1px solid #111;
+background-color: #eee;
+padding: 5px;
+opacity: 0.85;
 }
-#tooltip h3, #tooltip div { margin: 0; }
+#tooltip h3, #tooltip div { font-size: 10pt; margin: 0; }
