Fixed issue with cell binding in wizard: if one focuses on a different cell while the wizard is open, it will be bound to the original cell.
Some code layout cleanup.

A lot of excess whitespace removed.

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -517,6 +517,8 @@
       </div>
      </div>
      <div class="footer">
+      <span id="cellx" class="datastore"></span>
+      <span id="celly" class="datastore"></span>
       <a class="resize">&#x21f2;</a>
      </div>
     </div>
