--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -174,6 +174,8 @@ img.wizrep {
   padding-right: 1px;
 }
 
+.datastore { display: none; }
+
 #wizfunargs {
     overflow-y         : auto;
     min-width          : 270px;
