--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -495,7 +495,7 @@
     </div>
 
     <div id="funwiz" class="dialog">
-     <h2>$txt:{Functions}$</h2>
+     <h2>$txt:{Functions}$ &mdash; <span id="cellid"></span></h2>
      <a id="wizclose">x</a>
      <div>
       <div id="funwizwrapper">
