Changed tooltip background to light yellow

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/tooltip/jquery.tooltip.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/tooltip/jquery.tooltip.css
@@ -2,7 +2,7 @@
 position: absolute;
 z-index: 10000004;
 border: 1px solid #111;
-background-color: #eee;
+background-color: #ff9;
 padding: 2px;
 opacity: 0.85;
 }
