Categories and function list in wizard layout fixed, so that they have constant width.

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -176,6 +176,18 @@ img.wizrep {
 
 .datastore { display: none; }
 
+#funwizwrapper {
+  padding: 4px;
+}
+
+#wizcatlist {
+  width: 144px;
+}
+
+#wizfunlist {
+  width: 144px;
+}
+
 #wizfunargs {
     overflow-y         : auto;
     min-width          : 270px;
