Added jQuery plugin to calculate scrollbar width

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,9 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-<!--
       <a id="wizbtn" title="function wizard">wiz</a>
--->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -752,4 +750,5 @@
     <script src="/hypernumbers/hn.main.js"></script>
     <script src="/hypernumbers/hn.dialog.js"></script>
     <script src="/tooltip/jquery.tooltip.min.js"></script>
+    <script src="/hypernumbers/jquery.scrollbarWidth.min.js"></script>
 </html>
