--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -508,18 +508,18 @@
           <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizstatus">
+         <textarea id="wiztext" readonly="readonly"></textarea>
          <div id="wizbuttons">
           <button id="wizcanc" type="button">Cancel</button>
           <button id="wizdone" type="button">Done</button>
          </div>
-         <textarea id="wiztext" readonly="readonly"></textarea>
         </div>
       </div>
      </div>
      <div class="footer">
       <span id="cellx" class="datastore"></span>
       <span id="celly" class="datastore"></span>
-      <a class="resize">&#x21f2;</a>
+      <a class="resize"></a>
      </div>
     </div>
 
